--- a/src/home/Section.css
+++ b/src/home/Section.css
@@ -14,3 +14,12 @@
 .text-box p {
   font-size: 20px
 }
+
+/*Added to fix viewport display issues on devices with heights smaller than 500px*/
+@media (max-height: 500px) {
+  .section{
+    min-height: 100vh;
+    height: auto;
+    position: relative;
+  }
+}
